Bug 1251357 - fix regression where last MediaStreamTrack.stop did not turn off the camera light. r=jesup

MozReview-Commit-ID: DvDBKscIjnp